package.json modified

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "techdegree-project-6",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "Portfolio Website",
+  "main": "app.js",
   "scripts": {
     "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,9 +13,6 @@
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Chagorovski/TechDegree-Project-6/issues"
-  },
   "homepage": "https://github.com/Chagorovski/TechDegree-Project-6#readme",
   "dependencies": {
     "express": "^4.17.1",
